--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "dev": "nodemon app.js"
   },
   "dependencies": {
-    "body-parser": "^1.20.3",
+    "bcryptjs": "^2.4.3",
     "express": "^4.21.1",
     "mongoose": "^8.8.2"
   },
