Cache and Pagination handled

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "cors": "^2.8.5",
     "express": "^4.21.1",
     "mongoose": "^8.8.2",
+    "redis": "^4.7.0",
     "winston": "^3.17.0"
   },
   "devDependencies": {
