--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
+    "@langchain/google-genai": "^0.1.5",
     "amqplib": "^0.10.5",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.21.1",
+    "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.2",
     "redis": "^4.7.0",
