--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,15 +25,14 @@ services:
     volumes:
       - mongo_data:/data/db
 
-  rabbitmq:
-    image: rabbitmq:3-management
-    container_name: rabbitmq
-    ports:
-      - "5672:5672" # RabbitMQ port
-      - "15672:15672" # RabbitMQ management UI port
-    environment:
-      - RABBITMQ_DEFAULT_USER=guest
-      - RABBITMQ_DEFAULT_PASS=guest
+  #rabbitmq:
+  #  image: rabbitmq:management
+  #  container_name: rabbitmq
+  #  ports:
+  #    - "15672:15672"  # RabbitMQ management UI
+  #    - "5672:5672"    # RabbitMQ main port
+  #  networks:
+  #    - my-network
 
   redis:
     image: redis:7
